kubernetes/apps/books/base/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: books
  name: books-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: 192.168.10.20
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`get.books.kalexlab.xyz`)
      services:
        - name: shelfmark
          port: 8084
  tls:
    secretName: books-ingress-certificate-secret
